tdf#163344: improve Converter::convertDuration

Let it use the same calculation as ImpSvNumberInputScan::GetTimeRef.
Decreases rounding errors.

Change-Id: I6474a1a5913d78c236adc511389c4abcebed2de6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174650
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 9c9d2e21be06fa1c806c110812d6df783109d8b9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174664
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>